compiler/testData/diagnostics/tests/multiplatform/incompatibles.fir.kt
// IGNORE_FIR_DIAGNOSTICS
// RUN_PIPELINE_TILL: FIR2IR
// COMPARE_WITH_LIGHT_TREE
// MODULE: common
<!INCOMPATIBLE_MODIFIERS, NO_ACTUAL_FOR_EXPECT{JVM}!>expect<!> <!INCOMPATIBLE_MODIFIERS, NO_ACTUAL_FOR_EXPECT{PSI;JVM}!>actual<!> class <!ACTUAL_WITHOUT_EXPECT, ACTUAL_WITHOUT_EXPECT{METADATA}!>Sixth<!>

// MODULE: platform()()(common)
